--- a/priser.html
+++ b/priser.html
@@ -3,15 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="priser.css">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="styles/priser.css">
+    <link rel="stylesheet" href="styles/main.css">
     <title>Document</title>
 </head>
 <body>
  
+<main>
+    <div>
+
+   
+    <h1>Priser</h1>
+    <div>
+        <img src="img/dameklip.webp" alt="dameklip">
+        <h2>dameklip</h2>
+        <p>660kr</p>
+    </div>
+
+    <div>
+        <img src="img/herreklip.webp" alt="herreklip">
+        <h2>Herre klip</h2>
+        <p>560kr</p>
+    </div>
+
+    <div>
+        <img src="img/reflekser.webp" alt="reflekser">
+        <h2>Reflekser</h2>
+        <p>Fra 1000kr</p>
+    </div>
+
+    </div>
+
+
+
+
+</main>
+<footer></footer>
     
 
 
-
+<script src="script.js"></script>
 </body>
 </html>
