--- a/priser.html
+++ b/priser.html
@@ -38,6 +38,11 @@
 <main>
 
     <h1>Priser</h1>
+    <p class="info">Ring til os for mere information om priser og behandlinger. </p>
+    <div class="link">
+<a class="link" href="kontakt.html">Kontakt os her</a>
+    </div>
+    
     <div class="grid_1-1-1">
 
     <div class="box">
@@ -63,6 +68,13 @@
 
     </div>
 
+    <div class="produkter">
+        <img src="img/produkter.webp" alt="produkter">
+        <div class="tekst">
+        <h2>Produkter</h2>
+        <p>Du finder også et stort udvalg af håndplukkede produkter i vores butik på Østerbro.</p>
+        </div>
+    </div>
 
 
 
