--- a/forside.html
+++ b/forside.html
@@ -36,7 +36,28 @@
         </nav>
     </header>
     <main>
-        <div class="lottiefile"></div>
+        <div class="lottiefile">
+            <div>
+                <script src="https://unpkg.com/@dotlottie/player-component@2.7.12/dist/dotlottie-player.mjs"
+                    type="module"></script>
+                <dotlottie-player class="lottie"
+                    src="https://lottie.host/37c4136d-d119-499d-9554-e4e1d68bde9e/OU0XZkin31.lottie"
+                    background="transparent" speed="1" loop autoplay></dotlottie-player>
+
+            </div>
+        </div>
+        <div class="adressemidte">
+            <p>Østerbrogade 56D, k th. 2100, København Ø</p>
+        </div>
+        <div class="omsektion">
+            <div class="container">
+                <h1>Erik og Pernille</h1>
+                <a href="kontakt.html" class="hover-knap">Om os</a>
+            </div>
+            <div class="billedeforside">
+                <img src="img/forside/erikogpernille.webp" alt="Erik og Pernille">
+            </div>
+        </div>
 
     </main>
     <footer>
