--- a/om.html
+++ b/om.html
@@ -38,8 +38,9 @@
     </header>
 
     <main>
-        <video autoplay muted loop playsinline>
-            <source src="your-video.mp4" type="video/mp4">
+        <video controls autoplay>
+            <source src="img/Virksomhedssite_video.mp4" type="video/mp4">
+            Your browser does not support the video tag.
         </video>
 
         <h1>Om</h1>
