--- a/forside.html
+++ b/forside.html
@@ -49,7 +49,7 @@
         <div class="omsektion">
             <div class="container">
                 <h1>Erik og Pernille</h1>
-                <a href="kontakt.html" class="hover-knap">Om os</a>
+                <a href="om.html" class="hover-knap">Om os</a>
             </div>
             <div class="billedeforside">
                 <img src="img/forside/erikogpernille.webp" alt="Erik og Pernille">
