--- a/kontakt.html
+++ b/kontakt.html
@@ -39,7 +39,7 @@
 
     <main>
 
-        <h1 class="h1_contact">Contact Us</h1>
+        <h1 class="h1_contact">Kontakt Os</h1>
 
         <div class="grid1-1">
 
@@ -47,7 +47,7 @@
                 <form name="kontakt">
 
                     <div class="form-felt">
-                        <p class="p_contact">Full name:</p>
+                        <p class="p_contact">Fulde navn:</p>
                         <label>
                             <input placeholder="fx Peter Jensen" type="text" name="name" required>
                         </label>
@@ -61,7 +61,7 @@
                         </label>
                     </div>
                     <div class="form-felt">
-                        <p class="p_contact">Message:</p>
+                        <p class="p_contact">Besked:</p>
                         <label>
 
                             <textarea name="besked" rows="5"></textarea>
@@ -103,7 +103,7 @@
                 <div class="icon_rows3">
                     <img class="icons" src="img/Phone.svg" alt="Phone-Icon">
                     <div class="text-wrapper">
-                        <span>CALL US</span>
+                        <span>RING TIL OS</span>
                         <a href="tel:+1234567890" class="phone_link">+45 3535 5511</a>
                     </div>
                 </div>
@@ -116,7 +116,7 @@
 
         <div class="map">
 
-            <h2 class="map_h2">Location</h2>
+            <h2 class="map_h2">Lokation</h2>
             <div class="google-map">
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2248.4870244938134!2d12.57768187662374!3d55.697905773063916!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4652530747b20765%3A0xd51d15ec74408bfd!2sNormand%20%26%20Lundquist!5e0!3m2!1sen!2sdk!4v1733945076786!5m2!1sen!2sdk"
